# Monocular-SLAM-implementation

./: CMakeLists.txt  Monocular-SLAM_Presentation.pptx  README.md  ReadMe.txt
WillCodeForFood/: CMakeLists.txt  ReadMe.txt
WillCodeForFood/src/: mono-slam.cpp
WillCodeForFood/src/backend/: backend.cpp
WillCodeForFood/src/controller/: controller.cpp
WillCodeForFood/src/data/: CMakeLists.txt
WillCodeForFood/src/frontend/: feature_detector.cpp  feature_detector.h  feature_track.h  tracker.cpp
WillCodeForFood/src/test/: CMakeLists.txt  main.cpp
WillCodeForFood/src/viewer/: pangolin_viewer.cpp
WillCodeForFood/utils/: CMakeLists.txt  utils.cpp  utils.h
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.h
src/controller/: CMakeLists.txt  controller.h
src/data/: tum_dataset.cpp  tum_dataset.h
src/frontend/: CMakeLists.txt  frame.h  frontend.cpp  frontend.h  tracker.h
src/viewer/: CMakeLists.txt  pangolin_viewer.h
